// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Calls the canonical placeholder when platform is canonical and showPlaceholder is true 1`] = `
.c13 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c7 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 1rem;
}

.c15 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c11 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c9 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c9:hover,
.c9:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c12 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c14 {
  display: block;
  margin-top: 0.5rem;
}

.c3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
}

.c4 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: rgba(34,34,34,0.75);
  color: #FFFFFF;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
}

.c8 {
  padding-left: 0.25rem;
  font-weight: normal;
}

.c6 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

.c2 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c10 {
  position: absolute;
  bottom: 0;
}

.c1:hover .c10,
.c1:focus .c10 {
  background-color: #B80000;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 0.875rem;
  }
}

<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
  </head>
  <body>
    <div>
      <div
        class="c0"
      >
        <div
          class="c1 c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            >
              <div
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c6"
                >
                  <svg
                    class="c7"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                  >
                    <path
                      d="M32,16A16,16,0,1,1,16,0,16,16,0,0,1,32,16Zm-8.6-.8H16.6v3.1h2.9c-.2,1.5-1.6,2.4-3.7,2.4s-3.7-2.4-3.7-4.7,1-4.7,3.7-4.7,3,.8,3.2,2.2h4.2c-.4-4-3.9-5.8-7.2-5.8-4.8,0-8,3.7-8,8.3s3.1,8.3,8,8.3a5.4,5.4,0,0,0,4.5-2.1l.2,1.7h2.7Z"
                    />
                  </svg>
                </div>
                <strong
                  class="c8"
                >
                  Contains strong language and adult humour.
                </strong>
              </div>
            </div>
          </div>
          <button
            class="c9 c10"
          >
            <span
              class="c11"
            >
              Play video, "Five things ants can teach us about management", 3,11
            </span>
            <div
              aria-hidden="true"
              class="c12"
            >
              <svg
                class="c13"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
            </div>
            <time
              aria-hidden="true"
              class="c14"
              datetime="PT3M11S"
            >
              3:11
            </time>
          </button>
          <img
            alt=""
            class="c15"
            src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Does not Call the canonical placeholder when platform is canonical but showPlaceholder is false 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
  </head>
  <body>
    .c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div>
      <div
        class="c0"
      >
        <iframe
          allow="autoplay; fullscreen"
          allowfullscreen=""
          class="c1"
          src="https://www.test.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB"
          title="Media player"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the AMP player when platform is AMP 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          src="https://www.test.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"
          title="Media player"
        >
          <amp-img
            alt=""
            attribution=""
            height="16"
            layout="fill"
            placeholder="true"
            src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            width="9"
          />
        </amp-iframe>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the AMP player with a caption 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c1 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c1 > p:last-child {
  padding-bottom: 0;
}

.c1 i {
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c1 {
    padding: 0.5rem 0 0;
  }
}

<div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          src="https://www.test.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"
          title="Media player"
        >
          <amp-img
            alt=""
            attribution=""
            height="16"
            layout="fill"
            placeholder="true"
            src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            width="9"
          />
        </amp-iframe>
      </div>
      <figcaption
        class="c1"
      >
        <span
          class="c2"
        >
          Video caption, 
        </span>
        <p>
          Media Player With Caption
        </p>
      </figcaption>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the canonical player with a caption 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
  </head>
  <body>
    .c13 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c7 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 1rem;
}

.c15 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c11 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c9 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c9:hover,
.c9:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c12 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c14 {
  display: block;
  margin-top: 0.5rem;
}

.c3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
}

.c4 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: rgba(34,34,34,0.75);
  color: #FFFFFF;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
}

.c8 {
  padding-left: 0.25rem;
  font-weight: normal;
}

.c6 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

.c2 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c10 {
  position: absolute;
  bottom: 0;
}

.c1:hover .c10,
.c1:focus .c10 {
  background-color: #B80000;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c16 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c16 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c16 > p:last-child {
  padding-bottom: 0;
}

.c16 i {
  font-style: normal;
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 0.875rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c16 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c16 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c16 {
    padding: 0.5rem 0 0;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1 c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            >
              <div
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c6"
                >
                  <svg
                    class="c7"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                  >
                    <path
                      d="M32,16A16,16,0,1,1,16,0,16,16,0,0,1,32,16Zm-8.6-.8H16.6v3.1h2.9c-.2,1.5-1.6,2.4-3.7,2.4s-3.7-2.4-3.7-4.7,1-4.7,3.7-4.7,3,.8,3.2,2.2h4.2c-.4-4-3.9-5.8-7.2-5.8-4.8,0-8,3.7-8,8.3s3.1,8.3,8,8.3a5.4,5.4,0,0,0,4.5-2.1l.2,1.7h2.7Z"
                    />
                  </svg>
                </div>
                <strong
                  class="c8"
                >
                  Contains strong language and adult humour.
                </strong>
              </div>
            </div>
          </div>
          <button
            class="c9 c10"
          >
            <span
              class="c11"
            >
              Play video, "Five things ants can teach us about management", 3,11
            </span>
            <div
              aria-hidden="true"
              class="c12"
            >
              <svg
                class="c13"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
            </div>
            <time
              aria-hidden="true"
              class="c14"
              datetime="PT3M11S"
            >
              3:11
            </time>
          </button>
          <img
            alt=""
            class="c15"
            src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
          />
        </div>
      </div>
      <figcaption
        class="c16"
      >
        <span
          class="c11"
        >
          Video caption, 
        </span>
        <p>
          Media Player With Caption
        </p>
      </figcaption>
    </div>
  </body>
</html>
`;
